uptime-kuma/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    app:  uptime-kuma
  type:  ClusterIP
  ports:
    - name:  http
      port:  80
